...
                                        <rect key="frame" x="0.0" y="140.5" width="352" height="69.5"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DSh-Z8-rKS" userLabel="ATextField">
                                                <rect key="frame" x="41.5" y="8.5" width="299" height="52.5"/>
                                                <accessibility key="accessibilityConfiguration" hint="ATextField" identifier="ATextField" label="ATextField">
...
                                        <rect key="frame" x="0.0" y="218" width="352" height="69.5"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M1F-KZ-61y" userLabel="BTextField">
                                                <rect key="frame" x="41.5" y="8.5" width="299" height="52.5"/>
                                                <accessibility key="accessibilityConfiguration" hint="BTextField" identifier="BTextField" label="BTextField">
...
                                        <rect key="frame" x="0.0" y="287.5" width="352" height="69.5"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JTg-35-auu" userLabel="CTextField">
                                                <rect key="frame" x="41.5" y="8.5" width="299" height="52.5"/>
                                                <accessibility key="accessibilityConfiguration" hint="CTextField" identifier="CTextField" label="CTextField">
...
                                        <rect key="frame" x="0.0" y="357" width="352" height="69.5"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXk-55-mYB" userLabel="Resolver">
                                                <rect key="frame" x="0.0" y="0.0" width="352" height="69.5"/>
                                                <accessibility key="accessibilityConfiguration" hint="Resolver" identifier="Resolver" label="Resolver">
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AdM-pu-SH2" userLabel="R1Label">
                                                <rect key="frame" x="44" y="5" width="299" height="59.5"/>
                                                <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uN3-92-0VZ" userLabel="R2Label">
                                                <rect key="frame" x="44" y="5.5" width="299" height="59"/>
                                                <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
...
